--- a/public/styles.css
+++ b/public/styles.css
@@ -1,22 +1,37 @@
 .styled-table {
     border-collapse: collapse;
-    font-size: 1vw;
+    font-size: .8vw;
     font-family: sans-serif;
     margin-left: auto;
     margin-right: auto;
-    table-layout: fixed;
-    overflow: hidden;
-    min-width: 85vw;
-    max-width: 85vw;
 }
-
+#nav-bar{
+    display:flex;
+    justify-content: space-around;
+    margin:2vh auto;
+    width:95%;
+    padding:10px 0;
+    text-align: center;
+    background-color: #ff4654;
+    border-radius: 50px;
+    max-height:20px;
+}
+#nav-bar a{
+    text-decoration: none;
+    color:white;
+}
+#nav-bar a:link{
+    color:white;
+}
+#nav-bar a:hover{
+    border-bottom: 1px white solid;
+}
 #tabDiv {
-    min-width: 85vw;
-    max-width: 85vw;
+    min-width: 95vw;
+    max-width: 95vw;
     margin-left: auto;
     margin-right: auto;
 }
-
 img {
     width: 5%;
     display: block;
@@ -24,7 +39,18 @@ img {
     margin-right: auto;
     padding-bottom: 4vh;
 }
-
+#sesInfo{
+margin-left:20px;
+}
+#logo{
+    width: 3%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 1vh;
+    margin-top:0;
+    padding-top:0;
+}
 #scvsc.sc {
     color: yellow;
     animation: sc 0.5s linear infinite;
@@ -36,10 +62,12 @@ img {
 
 #versionText {
     color: lightgray;
-    font-size: 0.5vw;
+    font-size: 0.1vw;
     font-family: sans-serif;
     text-align: right;
     justify: right;
+    padding:0;
+    margin:0;
 }
 
 @keyframes sc {
@@ -101,45 +129,34 @@ img {
 }
 
 .ses {
-    max-width: 85vw;
-    min-width: 85vw;
+    min-width: 95vw;
+    max-width: 95vw;
     background-color: #ff4654;
     color: #ffffff;
     text-align: left;
     -webkit-app-region: drag;
     margin-left: auto;
     margin-right: auto;
-    font-size: 1vw;
+    font-size: 1em;
+    max-height:20vh;
 }
 
 .styled-table thead tr {
     background-color: #ff4654;
     color: #ffffff;
-    text-align: left;
+    text-align: center;
     -webkit-app-region: drag;
+    
 }
 
-.qbtn {
-    padding: 5px;
-    color: #ffffff;
-    background-color: #dd8a8a;
-    -webkit-app-region: no-drag;
+#scrollable-div{
+    overflow-y: scroll;
+    -ms-overflow-style: none;  
+    scrollbar-width: none;  
 }
-
-.sbtn {
-    padding: 5px;
-    color: #ffffff;
-    background-color: #dd8a8a;
-    -webkit-app-region: no-drag;
+#scrollable-div::-webkit-scrollbar {
+    width: 0px;
 }
-
-.cbtn {
-    padding: 5px;
-    color: #ffffff;
-    background-color: #dd8a8a;
-    -webkit-app-region: no-drag;
-}
-
 .styled-table th,
 .styled-table td {
     overflow: hidden;
@@ -147,10 +164,11 @@ img {
 }
 
 .styled-table tbody tr {
-    max-height: 2vh;
+    width: fit-content;
     border-bottom: 1px solid #dddddd;
-    overflow: hidden;
+    text-align: center;
     white-space: nowrap;
+    
 }
 
 .styled-table tbody tr:nth-of-type(even) {
@@ -164,47 +182,322 @@ img {
 .styled-table tbody tr:last-of-type {
     border-bottom: 2px solid #ff4654;
 }
-p.consoleEcho{
-    padding: none;
-    margin:1px;
-    color:#e4e4e4;
 
-}
-p.consoleResponse{
+p.consoleEcho {
     padding: none;
-    margin:1px;
-    color:rgb(182, 182, 182);
+    margin: 1px;
+    color: #e4e4e4;
 }
-#console-modal{
+
+p.consoleResponse {
+    padding: none;
+    margin: 1px;
+    color: rgb(182, 182, 182);
+}
+
+#console-modal {
     margin-top: 15vh;
-    display: none; 
-    position: fixed; 
+    display: none;
+    position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 25vw;
-    height: 50vh; 
-    overflow: auto; 
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.7);
+    height: 50vh;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.7);
     transform: translateX(150%);
     flex-direction: column-reverse;
     overflow: hidden;
-    align-items:flex-start;
-    padding:none;
+    align-items: flex-start;
+    padding: none;
     flex-wrap: wrap;
 }
-#consoleInput{
-    width: 100%;
-    height: 5%;
-    border:none;
-    background-color: rgba(0,0,0,0.4);
-    color:#f3f3f3;
+
+#driver-modal {
+    margin-top: 5vh;
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 65vw;
+    height: 55vh;
+    background-color: darkcyan;
+    background-color: rgba(0, 0, 0, 0.7);
+    justify-content: space-between;
+    margin-left: auto;
+    margin-right: auto;
+    transform: translateX(25%);
+    border-radius: 1%;
+    flex-grow: 1;
+}
+.tyre{
+    height:2vh;
+    width:auto;
+    padding:0;
+}
+#team-name {
+    font-size: 1.5vw;
+    color:white;
+    text-align: center;
+}
+#best-lap {
+        font-size: 1vw;
+    color:white;
+    text-align: center;
+}
+
+#last-lap {
+    font-size: 1vw;
+    color:white;
+    text-align: center;
+}
+
+#history-lap {
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    max-height: 60vh;
+    margin-right: auto;
+}
+#scrollable-div{
+    margin-left: auto;
+    max-height: 40vh;
+    margin-right: auto;
+}
+#history-lap::-webkit-scrollbar {
+    display:none;
+}
+#damage {
+    margin-bottom: auto;
+    background-color: darkgrey;
+    display:grid;
+    grid-template-columns: repeat(4, 3vw);
+    grid-auto-rows: 5vh;
+    grid-gap: 1vh;
+    justify-content: center;
+    margin-top:10vh;
+    text-align: center;
+    color:black;
+    margin-right: 3vw;
+
     
 }
+#driver-info{
+    margin-left:3vw;
+    text-align: center;
+    color:white;
+    font-size: .8vw;
+}
+#damage>p{
+    color:white;
+    grid-row: 1;
+    grid-column: 2;
+    margin-left:2vw;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+#history-lap>h1{
+    color:white;
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom: 5vh;
+}
+#lap-history{
+    display:table;
+    margin-left: auto;
+    margin-right: auto;
+    overflow-y: scroll;
+    -ms-overflow-style: none;  
+    scrollbar-width: none; 
+    max-height: 42vh;
+            max-width:25vw;
+    min-width:25vw;
+
+}
+#lap-history::-webkit-scrollbar{
+    display: none;
+}
+#lap-history td{
+    padding-left:.75vw;
+}
+#lap-history::-webkit-scrollbar{
+    display:none;
+}
+#history-header{
+    display:table;
+    margin-left: auto;
+    margin-right: auto;
+            max-width:25vw;
+    min-width:25vw;
+}
+#rwing{
+    background-color: lightgreen;
+    height:85%;
+    width:66%;
+    margin-left:auto;
+    grid-row: 2;
+    grid-column: 1/3;
+
+}
+#header-div{
+    color:white;
+}
+#lwing{
+    background-color: lightgreen;
+    height:85%;
+    width:66%;
+    grid-row: 2;
+    margin-right:auto;
+    grid-column: 3/5;
+
+
+}
+#rfloor{
+    background-color: lightskyblue;
+    height:100%;
+        grid-row: 3/5;
+
+        width:50%;
+        margin-left: auto;
+}
+
+#lfloor{
+    background-color: lightskyblue;
+    height:100%;
+        grid-row: 3/5;
+
+        width:50%;
+    }
+#rsidepods{
+    background-color: lightsalmon;
+    grid-row: 3/5;
+    width:50%;
+}
+#lsidepods{
+    background-color: lightsalmon;
+    height:100%;
+    width:50%;
+    grid-row: 3/5;
+    margin-left: auto;
+
+
+}
+#diffuser{
+    background-color: lightgoldenrodyellow;
+    grid-column: 2/4;
+
+    
+}
+#rear-wing{
+    background-color: lightcoral;
+        grid-column: 2/4;
+
+}
+#mainTable{
+    min-width: 95vw;
+    max-width: 95vw;
+}
+
+#consoleInput {
+    width: 100%;
+    height: 5%;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.4);
+    color: #f3f3f3;
+}
+
 input[type=text]:focus {
     border: none;
-  }
-#responses{
-    height:15%;
+}
+
+#responses {
+    height: 15%;
+}
+.forecastsvg{
+    float:left;
+    display:inline;
+    height:3vh;
+    width:6vw;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.forecast .rain-chance{
+    margin-top:0;
+    float:left;
+    display:inline;
+    margin-left:1vw;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.rain-chance-icon{
+    height:2vh;
+    width:auto;
+    float:left;
+    margin-left:1vw;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    
+}
+.forecast .forecast-out{
+    clear:both;
+    margin-left:1vw;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.forecast{
+    margin-right:4vw;
+    margin-bottom: 0;
+    padding-bottom: 0;
+}
+.tyre-info{
+    margin:0;
+    padding:0;
+    float:left;
+    width:auto;
+    height:2vh;
+}
+.ers-info{
+    padding:0;
+    float:right;
+    width:auto;
+    height:2vh;
+}
+.ers-cell{
+padding:0;
+    margin:0;
+}
+.ers-text{
+float:left;
+padding:0;
+    margin:0;
+}
+.best-lap{
+    background-color:rgb(255, 131, 218);
+}
+.best-sector{
+    background-color:lightgreen;
+}
+.well-worn{
+    background-color:orange;
+}
+.field-tested{
+    background-color: yellow;
+}
+.min-wear{
+    background-color: yellowgreen;
+}
+.fac-new{
+    background-color: lightgreen;
+}
+#controls{
+    display:flex;
+    justify-content: space-evenly;
+}
+#col-select{
+    display:flex;
+    width:85vw;
+    justify-content: space-evenly;
+    font-size:.75em
 }
